--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,103 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  background-color: #ffffff;
+  margin: 0%;
+  font-family: Arial;
+  background-color: transparent;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+h1,
+h4,
+h5 {
+  color: #14213d;
+}
+
+a {
+  color: #0000ee;
+}
+
+.componentContainer {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-width: 500px;
+  border-radius: 30px;
+  border: 4px solid #14213d;
+}
+
+.githubComponent {
+  height: 100%;
+  width: 80%;
+  margin-bottom: 10%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.cardContainer {
+  height: 20%;
+  width: 100%;
+  min-height: 100px;
+}
+
+.dateStarsSpan {
+  display: flex;
+  justify-content: space-between;
+  vertical-align: bottom;
+}
+
+#title {
+  padding-top: 10%;
+}
+
+#repoName {
+  text-decoration: underline;
+  font-weight: lighter;
+  margin-bottom: 2%;
+}
+
+#repoDescription {
+  margin-bottom: 2%;
+}
+@media (orientation: landscape) {
+  .componentContainer {
+    height: 60%;
+    width: 25%;
+  }
+  #title {
+    font-size: 2em;
+  }
+}
+
+@media (orientation: portrait) {
+  .componentContainer {
+    height: 80%;
+    width: 90%;
+    min-width: 250px;
+  }
+  .dateStarsSpan {
+    flex-direction: column;
+  }
+
+  #title {
+    font-size: 3em;
+  }
+}
+
+@media only screen and (max-width: 700px) {
+  .githubComponent {
+    width: 90%;
+  }
+  #title {
+    font-size: 1.8em;
+  }
+}
+
+/* IE10+ */
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+  .githubComponent {
+    justify-content: space-around;
+  }
 }
